tests/fixtures/invalid/pow_set_str_float.py
# Cannot call pow() with Set[int], Str, Float
x = pow({1, 2, 3}, "hello", 1.0)
